Fix images size and hide the overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,10 @@ body {
   font-family: var(--main-font-family);
 }
 
+.wrapper {
+  overflow-x: hidden;
+}
+
 .homepage-hero {
   background: var(--secondary-color);
   font-family: var(--main-font-family);
@@ -67,6 +71,11 @@ h3 {
   margin: 20px;
 }
 
+.projects-list img {
+  width: auto;
+  height: 350px;
+}
+
 .see-more-button {
   border: var(--main-button-border);
   padding: var(--button-padding);
@@ -77,15 +86,11 @@ h3 {
   font-weight: 600;
 }
 
-.project-img {
-  width: 400px;
-  height: 350px;
-}
-
 .contact-me {
   background-color: var(--main-color);
   clip-path: polygon(0 0, 100% 20%, 100% 100%, 0 100%);
-  padding: 120px;
+  padding-top: 120px;
+  padding-bottom: 120px;
   color: var(--secondary-color);
 }
 
@@ -106,4 +111,39 @@ footer {
 
 .social-media i {
   margin: 20px;
+}
+
+@media (max-width: 768px) {
+  .about-me,
+  .contact-me {
+    clip-path: none;
+  }
+}
+
+@media (max-width: 576px) {
+  .about-me-paragraph {
+    text-align: center;
+  }
+  h1 {
+    font-size: 30px;
+  }
+  .name {
+    font-size: 40px;
+  }
+  .homepage-hero a,
+  .about-me a {
+    font-size: 15px;
+  }
+  .languages-list img {
+    width: 50px;
+    margin: 10px;
+  }
+  .social-media i {
+    font-size: 1.5em;
+    margin: 10px;
+  }
+  .contact-me {
+    padding-top: 70px;
+    padding-bottom: 70px;
+  }
 }
